# Krepost_Z.codeProject

./: .gitignore  AGENTS.md  ARCHITECTURE_VISION.md  README.md  ROADMAP.md  ingest_vault.py  pyproject.toml  serve_lmstudio.py  smoke_lmstudio.py  Инструкция_установки_Крепости.md
Ataker-boop/: .gitignore  MODELS.md  README.md  pyproject.toml  seed_attacks.example.jsonl  Инструкция_установки_Атакера.md
Ataker-boop/ataker/: __init__.py  auth.py  benchmark_catalog.py  evals_ucs.py  generator.py  mutations.py  red_team_loop.py  sealed.py  success_analyzer.py  vault.py
Ataker-boop/design/: 2026-07-22-planner-executor-attacker-design.md  README.md
Ataker-boop/tests/: test_ataker.py  test_auth.py  test_sealed_receipts.py
Krepost/: 00-KREPOST-MOC.md
Probnoki/: TASK_CONTRACT_DRAFT.md  conftest.py  task_contract_draft.py  test_01_smart_cache_integration.py  test_02_session_rate_limiter.py  test_03_circuit_breaker.py  test_04_base64_decode.py  test_05_base64_limits.py  test_06_info_leakage.py  test_07_pipeline_close.py  test_08_normalized_length.py  test_09_base64_architecture.py  test_10_pii_masker.py  test_11_output_filter.py  test_12_security_context.py  test_13_full_pipeline.py  test_14_trust_registry.py  test_15_normalize.py  test_16_concurrent_safety.py  test_17_security_receipt.py  test_18_regex_filter.py  test_19_normalize_additions.py  test_20_audit_fixes.py  test_21_orchestration.py  test_22_control_char_bypass.py  test_23_tool_output_guard.py  test_24_url_guard.py  test_25_api.py  test_26_tool_loop.py  test_27_ollama_backend.py  test_28_memory.py  test_29_openai_backend.py  test_30_guard_prompts.py  test_31_factory_output_guard.py  test_32_circuit_breaker_half_open_probe.py  test_33_demo_env_guard.py  test_34_trust_registry_wal_race.py  test_35_urlguard_offloaded.py  test_36_smart_cache_offloaded_write.py  test_37_openai_api_key_env.py  (+25 more)
_handoff/: BUGS.md  HIERARCHICAL_DOMAIN_RAG_SPEC.md  LATEST.md  LIBRARY_JURISDICTIONS_SPEC.md  MEMORY_ROUTER_SPEC.md  ROUNDTABLE_DEBRIEF_SPEC.md  SANDBOX_ZOO_AIR.md
docs/: ROADMAP-v2.1.md
scripts/: ataker_hit_http.py  ataker_sandbox_air.sh  backfill_domain_metadata.py  bootstrap_vault.py  install_launchd_studio.sh  krepost_bridge_air.sh  krepost_bridge_studio.sh  probe_latency.py  serve_roundtable_air.sh  serve_sandbox_air.sh  vllm_serve.example.sh
tests/: test_assistant_prompt.py  test_fewshot_matcher.py  (+5 more)
(+215 files in other folders)
