[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ataker-boop"
version = "0.1.0"
description = "Атакующий модуль Крепости — adversarial-тестирование SecurityPipeline"
requires-python = ">=3.10"
dependencies = [
    "loguru",
]

[project.optional-dependencies]
llm = ["openai"]
full = ["openai", "chromadb"]
dev = ["pytest", "pytest-asyncio"]
planner = [
    "openai",
    "chromadb",
    "sentence-transformers",
    "pyotp>=2.9",
    "argon2-cffi>=23.1",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ataker*"]
